Fixed more CSS issues
There were more fixes that needed to be done on the css, and these cover them

--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -1,8 +1,4 @@
 .card {
-    .card-body {
-        padding: 20px;
-    }
-
     &.card-sm-border-radius {
         border-radius: 1rem;
 
